# NMPDE-Project---Flow-Past-a-Cylinder

./: .gitignore  CMakeLists.txt
cases/2D/: testcase_1.yaml  testcase_2.yaml  testcase_3.yaml
cases/3D/: testcase_1.yaml  testcase_2.yaml  testcase_3.yaml
mesh/: dealII_mesh.msh  mesh2D_example.msh  mesh3D2.5x1x1.msh  mesh3D_example.msh
mesh/2D/: grid_2D_coarse.msh  grid_2D_fine.msh  mesh2D.msh
mesh/3D/: grid_3D_coarse_cylinder.msh  grid_3D_coarse_parallelepiped.msh  grid_3D_fine_parallelepiped.msh  mesh3D_cylinder.msh
mesh_gen/: Mesh2D.py  Mesh3D.py  mesh  mesh_generation.py
plot_gen/: plot_coefficients.py
src/: BlockSchurPreconditioner.cpp  BoundaryValues.cpp  BoundaryValues.h  NavierStokesFractional.cpp  NavierStokesFractional.hpp  NonStationaryNavierStokes.cpp  NonStationaryNavierStokes.hpp  StationaryNavierStokes.cpp  StationaryNavierStokes.h  StationaryNavierStokes.hpp  Stokes.cpp  Stokes.hpp  Timer.hpp  main.cpp  test_ns.cpp  test_sns.cpp  test_stokes.cpp
src/originalCode/: Navier_Stokes.cpp  StationaryNavierStokes.cpp  StationaryNavierStokes.hpp
src/preconditioners/: BlockPreconditioner.cpp  BlockPrecondtioner.h  BlockSchurPreconditioner.cpp  BlockSchurPreconditioner.h  BlockSchurPreconditioner.hpp  BlockTriangularPrecondition.cpp  BlockTriangularPrecondition.hpp  PreconditionIdentity.cpp  PreconditionIdentity.h  PressureConvectionDiffusion.cpp  PressureConvectionDiffusion.hpp
